k8s/ingress-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#name-based-virtual-hosting

  # For example, the following Ingress routes traffic requested for first.bar.com to service1,
  # second.foo.com to service2, and any traffic to the IP address without a hostname defined in request
  # (that is, without a request header being presented) to service3.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-cluster-ip-service
            port: 
              number: 3000
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port: 
              number: 5000
